# gvSIG2_0

./: README.md
libjni-gdal/: .project  CMakeLists.txt  depman.xml  pom.xml  readme.txt
libjni-gdal/CMakeModules/: FindGDAL.cmake
libjni-gdal/src/main/java/org/gvsig/addo/: BuildingOverviewsException.java  IOverviewIncrement.java  Jaddo.java  WritingException.java
libjni-gdal/src/main/java/org/gvsig/jogr/: CrsGdalException.java  CrsOgrException.java  JNIBase.java  OGRCoordinateTransformation.java  OGRCorruptDataException.java  OGRCurve.java  OGRDataSource.java  OGREnvelope.java  OGRException.java  OGRFailureException.java  OGRFeature.java  OGRFeatureDefn.java  OGRField.java  OGRFieldDefn.java  OGRFieldType.java  OGRGeometry.java  OGRGeometryCollection.java  OGRGeometryFactory.java  OGRLayer.java  OGRLayerAttrIndex.java  OGRLineString.java  OGRLinearRing.java  OGRMultiLineString.java  OGRMultiPoint.java  OGRMultiPolygon.java  OGRNotEnoughDataException.java  OGRNotEnoughMemoryException.java  OGRPoint.java  OGRPolygon.java  OGRRegisterAll.java  OGRSFDriver.java  OGRSFDriverRegistrar.java  OGRSpatialReference.java  OGRStyleTable.java  OGRSurface.java  OGRTools.java  OGRUnsupportedGeometryTypeException.java  OGRUnsupportedOperationException.java  (+1 more)
libjni-gdal/src/main/native/: CMakeLists.txt
libjni-gdal/src/main/native/jgdal/: CMakeLists.txt  addo_interfaz.cpp  colortable_interfaz.c  gdal_interfaz.c  gdaldriver_interfaz.c  gdalwarp_interfaz.cpp  ogrdatasource_interfaz.cpp  ogrenvelope_interfaz.cpp  ogrfeature_interfaz.cpp  ogrfeaturedefn_interfaz.cpp  ogrfielddefn_interfaz.cpp  ogrlayer_interfaz.cpp  ogrpolygon_interfaz.cpp  ogrregisterall_interfaz.cpp  ogrsfdriver_interfaz.cpp  ogrsfdriverregistrar_interfaz.cpp  ogrspatialreference_interfaz.c  ogrtools_interfaz.cpp  rasterband_interfaz.c  warpfunc.cpp
(+6614 files in other folders)
